--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,20 +1,15 @@
-.container {
+.dialogs {
     display: grid;
     grid-template-columns: 2fr 10fr;
+    padding: 20px;
+    max-width: 600px;
+    height: 100%;
 }
 
-.dialogs {
-
-}
-
-.dialog {
-
+.dialogsElem {
+    padding-right: 20px;
 }
 
 .messages {
-
-}
-
-.message {
 
 }
