--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -1,20 +1,3 @@
-.container {
-    display: grid;
-    grid-template-columns: 2fr 10fr;
-}
-
-.dialogs {
-
-}
-
-.dialog {
-
-}
-
-.messages {
-
-}
-
 .message {
-
+    margin: 10px 0;
 }
