--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,34 +1,22 @@
-.header {
-    width: 100%;
-    height: 100px;
-    background-color: rgba(100, 100, 100, 1);
-}
-
-.info {
-
-}
-
-.ava {
-    width: 100px;
-    height: 100px;
-}
-
-.description {
-
-}
-
 .content {
 
 }
 
 .newPost {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.newPost textarea {
+    height: 100px;
+    width: 100%;
+}
+
+.newPost button {
+    width: max-content;
 }
 
 .posts {
-
-}
-
-.post {
 
 }
