--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,34 +1,13 @@
-.header {
-    width: 100%;
-    height: 100px;
-    background-color: rgba(100, 100, 100, 1);
-}
-
-.info {
-
-}
-
-.ava {
-    width: 100px;
-    height: 100px;
-}
-
-.description {
-
+.container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
 }
 
 .content {
 
 }
 
-.newPost {
-
-}
-
-.posts {
-
-}
-
-.post {
-
+.likes {
+    align-self: end;
 }
