Lesson 31 (add onClick functions for buttons)

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -11,5 +11,19 @@
 }
 
 .messages {
+    display: flex;
+    flex-direction: column;
+}
 
+.newMessage {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.newMessage button {
+    margin-left: 10px;
+}
+
+.newMessage textarea {
+    width: 100%;
 }
